# BDTK

./: .gitmodules
cpp/: CMakeLists.txt
cpp/src/cider-velox/: CMakeLists.txt
cpp/src/cider-velox/benchmark/expression/: StringFunctionBenchmark.cpp
cpp/src/cider-velox/src/: CMakeLists.txt  CiderHashJoinBuild.cpp
cpp/src/cider-velox/src/ciderTransformer/: CMakeLists.txt
cpp/src/cider-velox/src/planTransformer/: CMakeLists.txt
cpp/src/cider-velox/src/substrait/: CMakeLists.txt  VeloxPlanFragmentToSubstraitPlan.cpp
cpp/src/cider-velox/test/: CMakeLists.txt
cpp/src/cider-velox/test/SubstraitTest/: CMakeLists.txt
cpp/src/cider-velox/test/planTransformerTest/: CMakeLists.txt
cpp/src/cider/examples/: CMakeLists.txt
cpp/src/cider/exec/module/: CMakeLists.txt
cpp/src/cider/exec/nextgen/function/: CiderStringFunctions.cpp
cpp/src/cider/exec/nextgen/jitlib/llvmjit/: LLVMJITEngine.cpp  LLVMJITModule.cpp
cpp/src/cider/exec/plan/lookup/: CMakeLists.txt
cpp/src/cider/exec/plan/parser/: CMakeLists.txt  ConverterHelper.cpp
cpp/src/cider/exec/plan/substrait/: CMakeLists.txt
cpp/src/cider/exec/processor/: DefaultBatchProcessor.cpp
cpp/src/cider/function/: CMakeLists.txt
cpp/src/cider/tests/: CMakeLists.txt
cpp/src/cider/tests/nextgen/compiler/: CMakeLists.txt
cpp/src/cider/tests/nextgen/functional/: CMakeLists.txt
cpp/src/cider/tests/plan/: CMakeLists.txt
cpp/src/cider/tests/processor/: CMakeLists.txt
cpp/src/cider/tests/utils/: CMakeLists.txt  DuckDbQueryRunner.cpp
cpp/src/cider/type/data/: sqltypes.h
src/cider/tests/nextgen/functional/benchmark/: FilterBenchmark.cpp  StringFuncBenchmark.cpp
src/cider/tests/utils/: CiderNextgenBenchmarkBase.cpp  CiderNextgenBenchmarkBase.h  CiderNextgenBenchmarkRunner.cpp  CiderTestBase.cpp
src/cider/util/: measure.h
